--- a/index.html
+++ b/index.html
@@ -391,7 +391,6 @@
                     <h2 aria-level="2" role="heading">
                         Contactez-moi&nbsp;!
                     </h2>
-                    <!--Logo-->
                 </div>
                 <form id="form" action="" method="post">
                     <div class="form-content">
@@ -400,20 +399,22 @@
                             <label for="name">
                                 Nom complet&nbsp;: &#42;
                             </label>
-                            <input class="input-name" id="name" type="text" name="name" placeholder="Saisir votre nom et prénom">
+                            <input id="name" type="text" name="name"
+                                   placeholder="Saisir votre nom et prénom" required>
                         </div>
                         <div>
                             <label for="email">
                                 Adresse email&nbsp;: &#42;
                             </label>
-                            <input id="email" type="email" name="email" placeholder="Saisir votre adresse e-mail">
+                            <input id="email" type="email" name="email" placeholder="Saisir votre adresse e-mail"
+                                   required>
                         </div>
                         <div>
                             <label for="message">
                                 Message&nbsp;: &#42;
                             </label>
                             <textarea name="message" id="message" cols="30" rows="10"
-                                      placeholder="Ecrivez votre message ici"></textarea>
+                                      placeholder="Ecrivez votre message ici" required></textarea>
                         </div>
                         <div>
                             <div class="trapezoid">
@@ -424,7 +425,6 @@
                         </div>
                     </div>
                 </form>
-                <!--Animation cercle-->
             </div>
         </div>
     </section>
