--- a/index.html
+++ b/index.html
@@ -245,33 +245,53 @@
                 <a href="https://www.alsacreations.com/home/0" title="Vers le site Alsacréations">Voir plus
                     d'actualités</a>
             </div>
-            <!--Animation cercle-->
         </div>
     </section>
     <section id="hobbies">
-        <h2 aria-level="2" role="heading" class="hidden">
-            Centres d'intérèts
-        </h2>
-        <!--Logo-->
         <div class="hobbies">
-            <ul>
-                <li>Sports</li>
-                <li>Loisirs</li>
-                <li>Travail</li>
-            </ul>
-            <div>
-                <img src="./img/peche.jpg" alt="" width="1029" height="500">
-            </div>
-            <div class="nav-hobbies">
-                <span>Pêche</span>
-                <span>Jeux vidéos</span>
-                <span>Lecture</span>
-                <span>Voyage</span>
-                <span>Cuisine</span>
+            <h2 aria-level="2" role="heading">
+                Centres d'intérèts
+            </h2>
+            <div class="content-hobbies">
+                <div class="main-hobbies">
+                    <a><img src="./img/peche.jpg" alt="image d'une canne à pêche" width="800" height="500"></a>
+                </div>
+                <div class="nav-hobbies">
+                    <a href="#hobbies">
+                        <article class="items">
+                            <img src="/img/game2.jpg" alt="image d'une console de jeux-vidéos" width="" height="">
+                            <h3 aria-level="3" role="heading">
+                                Jeux-vidéos
+                            </h3>
+                        </article>
+                    </a>
+                    <a href="#hobbies">
+                        <article class="items">
+                            <img src="/img/travel.jpg" alt="image" width="" height="">
+                            <h3 aria-level="3" role="heading">
+                                Voyages
+                            </h3>
+                        </article>
+                    </a>
+                    <a href="#hobbies">
+                        <article class="items">
+                            <img src="/img/food.jpg" alt="image de nourriture" width="" height="">
+                            <h3 aria-level="3" role="heading">
+                                Cuisine
+                            </h3>
+                        </article>
+                    </a>
+                    <a href="#hobbies">
+                        <article class="items">
+                            <img src="/img/manga.jpg" alt="image de mangas" width="" height="">
+                            <h3 aria-level="3" role="heading">
+                                Manga
+                            </h3>
+                        </article>
+                    </a>
+                </div>
             </div>
         </div>
-        <!--Liste ?-->
-        <!--Animation cercle-->
     </section>
     <section id="exp">
         <h2 aria-level="2" role="heading">
